<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="categories">CHUYÊN MỤC</string>
    <string name="app_name">Kênh 14</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log Out</string>
    <string name="com_facebook_loginview_log_in_button">Log In</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log Out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log In…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged In</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not Logged In</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="app_color">\#fb9600</string>
    <string name="action_settings">Settings</string>
    <string name="lblSettings">THIẾT LẬP</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="lblRequireInternet">Bạn cần kết nối Internet để sử dụng ứng dụng.</string>
    <string name="txt_tai_khoan_viet_id">Đăng nhập tài khoản VietID</string>
    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="msg_ConfirmCloseApp">Bạn muốn đóng ứng dụng?</string>
    <string name="msg_yes">Đồng ý</string>
    <string name="msg_no">Không</string>
    <string name="lblOtherNewsPaper">BÁO KHÁC</string>
    <string name="lblNewsPaperAFamily">AFamily</string>
    <string name="lblNewsPaperAutopro">Autopro</string>
    <string name="lblNewsPaperDantri">Dantri</string>
    <string name="lblNewsPaperGameK">GameK</string>
    <string name="lblNewsPaperGenK">GenK</string>
    <string name="lblNewsPaperKenh14">Kenh14</string>
    <string name="lblNewsPaperSohaNews">Soha News</string>
    <string name="lblNewsPaperCafeBiz">Cafe Biz</string>
    <string name="lblNewsPaperCafeF">Cafe F</string>
    <string name="app_id">392854240830926</string>
    <string name="fb_cancelled">Đã hủy</string>
    <string name="fb_permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="fb_share_success">Chia sẻ thành công</string>
    <string name="fb_share_fail">Chia sẻ lỗi</string>
    <string name="fb_share">Chia sẻ</string>
    <string name="login">Đăng nhập</string>
    <string name="linkhay">LinkHay</string>
    <string name="by">bằng</string>
    <string name="ming_id">MingID</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="share">Chia sẻ</string>
    <string name="sub_title">Thông điệp phụ …</string>
    <string name="imageview_seperateline">Seperate line</string>
    <string name="imageview_splashimage">Splash image</string>
    <string name="imageview_menubutton">Menu Button</string>
    <string name="imageview_linkhaylogoicon">Linkhay Logo</string>
    <string name="imageview_linkhaylogin">Linkhay login</string>
    <string name="imageview_logoicon">Logo icon</string>
    <string name="imageview_backicon">Back icon</string>
    <string name="imageview_commenticon">Comment icon</string>
    <string name="imageview_shareicon">Share icon</string>
    <string name="imageview_closeicon">Close icon</string>
    <string name="imageview_removeicon">Remove icon</string>
    <string name="imageview_dragicon">Drag icon</string>
    <string name="imageview_addicon">Add icon</string>
    <string name="imageview_arrowicon">Arrow icon</string>
    <string name="imageview_menuicon">Menu icon</string>
    <string name="imageview_refreshicon">Refresh icon</string>
    <string name="imageview_settingicon">Setting icon</string>
    <string name="imageview_topnewimage">Top new image</string>
    <string name="imageview_topnewlogo">Top new logo</string>
    <string name="imageview_slidebar">Slider bar</string>
    <string name="imageview_siteimage">Site image</string>
    <string name="imageview_tranferencelayout">Tranference layout</string>
    <string name="imageview_fullimage">Full image</string>
    <string name="imageview_image">Image</string>
    <string name="imageview_clearsearch">Clear search</string>
    <string name="error_internet">Lỗi trong quá trình kết nối.</string>
    <string name="error_link">Không tồn tại link</string>
    <string name="error_image">Lỗi trong quá trình download ảnh</string>
    <string name="offline_mode">Bạn đang đọc báo ở chế độ offline.</string>
    <string name="error_watch_video">Bạn cần kết nối mạng để xem video.</string>
    <string name="error_watch_image">Bạn cần kết nối mạng để xem ảnh.</string>
    <string name="error_login_vietid">Bạn cần kết nối mạng để đăng nhập.</string>
    <string name="notify_save_image_to_gallery">Ảnh đã được lưu xuống gallery của bạn.</string>
    <string name="error_server">Kết nối tới máy chủ gặp sự cố, vui lòng thử lại sau ít phút!</string>
    <string name="help_package">help.setting</string>
    <string name="offline_package">offline.setting</string>
    <string name="logout_package">logout.setting</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_title">
        <item>Dân trí</item>
        <item>SohaNews</item>
        <item>CafeF</item>
        <item>CafeBiz</item>
        <item>GenK</item>
        <item>GameK</item>
        <item>AutoPro</item>
        <item>Afamily</item>
    </string-array>
    <string-array name="nav_drawer_content">
        <item>Hậu trường</item>
        <item>Thể thao</item>
        <item>Thời cuộc</item>
        <item>Phong cách</item>
        <item>Thư giãn</item>
        <item>Góc độc giả</item>
        <item>Cưới</item>
        <item>Showbiz Việt</item>
        <item>Châu Á</item>
        <item>Hollywood</item>
        <item>Bên lề</item>
        <item>Clip</item>
        <item>Khỏe đẹp</item>
        <item>24h</item>
        <item>Hình sự</item>
        <item>Thương trường</item>
        <item>Thời trang</item>
        <item>Tâm tình</item>
        <item>làm đẹp</item>
        <item>Trắc nghiệm</item>
        <item>Ăn chơi</item>
        <item>Dân chơi</item>
        <item>Cười</item>
        <item>Game</item>
        <item>Chơi blog</item>
        <item>Thi ảnh</item>
        <item>Miss</item>
        <item>Cô dâu</item>
        <item>Cẩm nang</item>
        <item>Ảnh cưới</item>
        <item>Chia sẻ</item>
    </string-array>
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/logo_dantri</item>
        <item>@drawable/logo_soha</item>
        <item>@drawable/logo_cafef</item>
        <item>@drawable/logo_cafebiz</item>
        <item>@drawable/logo_genk</item>
        <item>@drawable/logo_gamek</item>
        <item>@drawable/logo_autopro</item>
        <item>@drawable/logo_afamily</item>
    </array>

</resources>