<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/navigatorLayout" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="60.0dip">
        <ImageView android:id="@id/backButton" android:background="@drawable/selector_backbutton" android:layout_width="30.0dip" android:layout_height="30.0dip" android:scaleType="fitStart" android:layout_centerVertical="true" android:contentDescription="@string/imageview_backicon" />
        <ProgressBar android:id="@id/loadingProgressBar" android:layout_margin="0.0dip" android:layout_marginLeft="10.0dip" android:layout_toRightOf="@id/backButton" android:layout_centerVertical="true" style="@style/ProgressBar" />
        <ImageView android:id="@id/logoLinkHay" android:layout_width="wrap_content" android:layout_height="30.0dip" android:src="@drawable/linkhay_text" android:scaleType="fitCenter" android:adjustViewBounds="true" android:layout_centerInParent="true" android:contentDescription="@string/imageview_linkhaylogoicon" />
        <Button android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/shareButton" android:background="@drawable/share_button" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/seperateLine1" android:background="#ffff0000" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:id="@id/title" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lines="3" android:singleLine="false" android:inputType="textMultiLine" />
            <ImageButton android:id="@id/removeAllTextButton" android:background="@null" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginRight="5.0dip" android:src="@drawable/content_drawer_remove" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/imageview_removeicon" />
        </RelativeLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="3.0">
            <ImageView android:id="@id/imageLink" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="centerCrop" android:adjustViewBounds="true" android:layout_weight="2.0" android:contentDescription="@string/imageview_image" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <EditText android:id="@id/subTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:hint="@string/sub_title" android:inputType="text" />
                <Spinner android:id="@id/channel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:hint="@string/password" android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>